# rag-vs-finetune

./: .gitignore  README.md  azure_client.py  build_data.py  claude_conditions.py  config.py  eval_all.py  eval_format.py  load_questions.py  make_format_data.py  make_report.py  make_synthetic_data.py  pyproject.toml  schema.py  train_format.py  train_local.py
bakeoff/: questions.py  questions_brk.py  questions_financebench.py
bakeoff/results/: baseline_chunks_amd_tuned.jsonl  baseline_chunks_apple_tuned.jsonl  baseline_chunks_berkshire_tuned.jsonl  baseline_chunks_boeing_tuned.jsonl  runs_amd_tuned_scored.jsonl  runs_apple_tuned_scored.jsonl  runs_berkshire_tuned_scored.jsonl  runs_boeing_tuned_scored.jsonl
posts/: README.md
posts/how-to-finetune/: how-to-finetune.md
posts/rag-or-finetuning/: rag-vs-finetuning.md
work/: fmt_pipeline.sh  format_results.json  pipeline.sh  report.md  results.json  splits.json
